// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileTopNavigationTools renders 1`] = `
<Menu
  constrain="window"
  defaultShow={false}
  disabled={false}
  key="menu"
  label={null}
  mountNode={null}
  offsetX={0}
  offsetY={0}
  placement="bottom end"
  shouldFocusTriggerOnClose={true}
  shouldHideOnSelect={true}
  trigger={
    <IconButton
      as="button"
      color="secondary"
      cursor="pointer"
      margin="0"
      renderIcon={[Function]}
      screenReaderLabel="LTI Tool Menu"
      shape="rectangle"
      size="medium"
      type="button"
      withBackground={false}
      withBorder={false}
    />
  }
  withArrow={true}
>
  <MenuItem
    disabled={false}
    key="2"
    label="Launch Tool 2"
    onSelect={[Function]}
    type="button"
    value="2"
  >
    <Flex
      as="span"
      direction="row"
      display="flex"
      gap="small"
      justifyItems="start"
      withVisualDebug={false}
      wrap="no-wrap"
    >
      <Img
        alt="Tool 2"
        display="inline-block"
        height="1rem"
        src="https://instructure.com"
        withBlur={false}
        withGrayscale={false}
      />
      <TruncateText
        debounce={0}
        ellipsis="…"
        ignore={
          [
            " ",
            ".",
            ",",
          ]
        }
        maxLines={1}
        position="end"
        truncate="character"
      >
        Tool 2
      </TruncateText>
    </Flex>
  </MenuItem>
  <MenuItemSeparator />
  <MenuItem
    disabled={false}
    key="1"
    label="Launch Tool 1"
    onSelect={[Function]}
    type="button"
    value="1"
  >
    <Flex
      as="span"
      direction="row"
      display="flex"
      gap="small"
      justifyItems="start"
      withVisualDebug={false}
      wrap="no-wrap"
    >
      <Img
        alt="Tool 1"
        display="inline-block"
        height="1rem"
        src="https://instructure.com"
        withBlur={false}
        withGrayscale={false}
      />
      <TruncateText
        debounce={0}
        ellipsis="…"
        ignore={
          [
            " ",
            ".",
            ",",
          ]
        }
        maxLines={1}
        position="end"
        truncate="character"
      >
        Tool 1
      </TruncateText>
    </Flex>
  </MenuItem>
</Menu>
`;

exports[`TopNavigationTools renders 1`] = `
<Flex
  as="div"
  direction="row-reverse"
  display="flex"
  gap="small"
  height="100%"
  justifyItems="start"
  width="100%"
  withVisualDebug={false}
  wrap="no-wrap"
>
  <Item
    as="span"
    shouldGrow={false}
    shouldShrink={false}
  >
    <Menu
      constrain="window"
      defaultShow={false}
      disabled={false}
      key="menu"
      label="LTI Tools Menu"
      mountNode={null}
      offsetX={0}
      offsetY={0}
      placement="bottom end"
      shouldFocusTriggerOnClose={true}
      shouldHideOnSelect={true}
      trigger={
        <Tooltip
          color="primary"
          constrain="window"
          defaultIsShowingContent={false}
          offsetX={0}
          offsetY={0}
          placement="top"
          renderTip="LTI Tools Menu"
        >
          <Button
            as="button"
            color="secondary"
            cursor="pointer"
            display="inline-block"
            margin="0"
            renderIcon={[Function]}
            size="medium"
            textAlign="center"
            type="button"
            withBackground={true}
          />
        </Tooltip>
      }
      withArrow={true}
    >
      <MenuItem
        disabled={false}
        key="2"
        label="Launch Tool 2"
        onSelect={[Function]}
        type="button"
        value="2"
      >
        <Flex
          as="span"
          direction="row"
          display="flex"
          gap="small"
          justifyItems="start"
          withVisualDebug={false}
          wrap="no-wrap"
        >
          <IconLtiLine
            title="Tool 2"
          />
          <TruncateText
            debounce={0}
            ellipsis="…"
            ignore={
              [
                " ",
                ".",
                ",",
              ]
            }
            maxLines={1}
            position="end"
            truncate="character"
          >
            Tool 2
          </TruncateText>
        </Flex>
      </MenuItem>
    </Menu>
  </Item>
  <Item
    as="span"
    key="1"
    shouldGrow={false}
    shouldShrink={false}
  >
    <Tooltip
      color="primary"
      constrain="window"
      defaultIsShowingContent={false}
      offsetX={0}
      offsetY={0}
      placement="top"
      renderTip="Tool 1"
    >
      <IconButton
        as="button"
        color="secondary"
        cursor="pointer"
        data-tool-id="1"
        margin="0"
        onClick={[Function]}
        renderIcon={
          <Img
            alt="Tool 1"
            display="inline-block"
            height="1rem"
            src="https://instructure.com"
            withBlur={false}
            withGrayscale={false}
          />
        }
        screenReaderLabel="Tool 1"
        shape="rectangle"
        size="medium"
        type="button"
        withBackground={true}
        withBorder={true}
      />
    </Tooltip>
  </Item>
</Flex>
`;

exports[`TopNavigationTools renders with no pinned tools 1`] = `
<Flex
  as="div"
  direction="row-reverse"
  display="flex"
  gap="small"
  height="100%"
  justifyItems="start"
  width="100%"
  withVisualDebug={false}
  wrap="no-wrap"
>
  <Item
    as="span"
    shouldGrow={false}
    shouldShrink={false}
  >
    <Menu
      constrain="window"
      defaultShow={false}
      disabled={false}
      key="menu"
      label="LTI Tools Menu"
      mountNode={null}
      offsetX={0}
      offsetY={0}
      placement="bottom end"
      shouldFocusTriggerOnClose={true}
      shouldHideOnSelect={true}
      trigger={
        <Tooltip
          color="primary"
          constrain="window"
          defaultIsShowingContent={false}
          offsetX={0}
          offsetY={0}
          placement="top"
          renderTip="LTI Tools Menu"
        >
          <Button
            as="button"
            color="secondary"
            cursor="pointer"
            display="inline-block"
            margin="0"
            renderIcon={[Function]}
            size="medium"
            textAlign="center"
            type="button"
            withBackground={true}
          />
        </Tooltip>
      }
      withArrow={true}
    >
      <MenuItem
        disabled={false}
        key="1"
        label="Launch Tool 1"
        onSelect={[Function]}
        type="button"
        value="1"
      >
        <Flex
          as="span"
          direction="row"
          display="flex"
          gap="small"
          justifyItems="start"
          withVisualDebug={false}
          wrap="no-wrap"
        >
          <Img
            alt="Tool 1"
            display="inline-block"
            height="1rem"
            src="https://instructure.com"
            withBlur={false}
            withGrayscale={false}
          />
          <TruncateText
            debounce={0}
            ellipsis="…"
            ignore={
              [
                " ",
                ".",
                ",",
              ]
            }
            maxLines={1}
            position="end"
            truncate="character"
          >
            Tool 1
          </TruncateText>
        </Flex>
      </MenuItem>
      <MenuItem
        disabled={false}
        key="2"
        label="Launch Tool 2"
        onSelect={[Function]}
        type="button"
        value="2"
      >
        <Flex
          as="span"
          direction="row"
          display="flex"
          gap="small"
          justifyItems="start"
          withVisualDebug={false}
          wrap="no-wrap"
        >
          <Img
            alt="Tool 2"
            display="inline-block"
            height="1rem"
            src="https://instructure.com"
            withBlur={false}
            withGrayscale={false}
          />
          <TruncateText
            debounce={0}
            ellipsis="…"
            ignore={
              [
                " ",
                ".",
                ",",
              ]
            }
            maxLines={1}
            position="end"
            truncate="character"
          >
            Tool 2
          </TruncateText>
        </Flex>
      </MenuItem>
    </Menu>
  </Item>
</Flex>
`;

exports[`TopNavigationTools renders with no tools 1`] = `
<Flex
  as="div"
  direction="row-reverse"
  display="flex"
  gap="small"
  height="100%"
  justifyItems="start"
  width="100%"
  withVisualDebug={false}
  wrap="no-wrap"
/>
`;
